<resources>
    <string name="app_name">MyMakingLayout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Home Store - Bottom Nav Menu  -->
    <string name="title_explorer">Explorer</string>
    <string name="title_bag">Bag</string>
    <string name="title_heart">Heart</string>
    <string name="title_human">Human</string>

    <!--    Home Store - Main Spinner    -->
    <string-array name="array_of_cities">
        <item>Zihuatanejo, Gro</item>
        <item>Novokuznetsk, RU</item>
        <item>Moscow, RU</item>
        <item>St. Petersburg, RU</item>
    </string-array>
    <string name="ic_filter">icon filter</string>
    <string name="ic_geolocation">icon geolocation</string>

<!--    Home Store - Select Category Part   -->
    <string name="title_select_category">Select Category</string>
    <string name="category_phones">Phones</string>
    <string name="category_computer">Computer</string>
    <string name="category_health">Health</string>
    <string name="category_books">Books</string>
    <string name="subtitle_view_all">view all</string>

<!--    Home Store - Hot Sales  -->
    <string name="title_hot_sales">Hot Sales</string>
    <string name="hot_sales_description">Súper. Mega. Rápido.</string>
    <string name="new_hot_sales">New</string>
    <string name="iphone_12">Iphone 12</string>
    <string name="buy_now">Buy now!</string>
    <string name="subtitle_see_more">see more</string>

    <!--  Home Store - Best Seller part    -->
    <string name="title_best_seller">Best Seller</string>
    <string name="best_seller_description_item_1">Samsung Galaxy S20 Ultra</string>
    <string name="best_seller_description_item_2">Xiaomi Mi 10 Pro</string>
    <string name="best_seller_description_item_3">Samsung Note 20 Ultra</string>
    <string name="best_seller_description_item_4">Motorola One Edge</string>
    <string name="best_seller_price_item_1">$1,047</string>
    <string name="best_seller_price_item_2">$300</string>
    <string name="best_seller_price_item_3">$1,047</string>
    <string name="best_seller_price_item_4">$300</string>
    <string name="best_seller_old_price_item_1">$1,500</string>
    <string name="best_seller_old_price_item_2">$400</string>
    <string name="best_seller_old_price_item_3">$1,500</string>
    <string name="best_seller_old_price_item_4">$400</string>

    <!--  Fragment Splash  -->
    <string name="title_splash">Ecommerce \nConcept</string>

    <!-- Home Store - Filter popup part  -->
    <string name="filter_options">Filter options</string>
    <string name="filter_done">Done</string>
    <string name="filter_title_brand">Brand</string>
    <string name="filter_title_price">Price</string>
    <string name="filter_title_size">Size</string>
    <string-array name="filter_brand_array">
        <item>Samsung</item>
    </string-array>
    <string-array name="filter_price_array">
        <item>$300 - $500</item>
    </string-array>
    <string-array name="filter_size_array">
        <item>4.5 to 5.5 inches</item>
    </string-array>

    <!--  Details Fragment  -->
    <string name="title_product_detail">Product Detail</string>
    <string name="add_address">Add address</string>
    <string name="my_cart">My Cart</string>
    <string name="cart_label_total">Total</string>
    <string name="cart_total_price">[TOTAL_PRICE] us</string>
    <string name="cart_label_delivery">Delivery</string>
    <string name="cart_delivery_value">Free</string>
    <string name="cart_text_checkout">Checkout</string>
    <string name="snackbar_success_add">товар добавлен в корзину</string>
    <string name="snackbar_failure_add">ошибка добавления в корзину</string>

    <!--  Favorite Fragment  -->
    <string name="snackbar_favorite_success_add">Добавлено в избранное</string>
    <string name="snackbar_favorite_fail_add">Ошибка добавления</string>

</resources>