<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color"
    tools:context=".scenes.HomeStoreFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/header_home_store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/rv_category"
                layout="@layout/home_store_header_layout"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@id/search_part_home_store"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header_home_store"
                tools:listitem="@layout/category_cell" />

            <include
                android:id="@+id/search_part_home_store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/home_store_search_part_layout"
                app:layout_constraintTop_toBottomOf="@id/rv_category"
                app:layout_constraintBottom_toTopOf="@id/tv_header_hot_sales"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_header_hot_sales"
                style="@style/font_700_dark_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="24dp"
                android:text="@string/title_hot_sales"
                android:textSize="25sp"
                app:fontFamily="@font/mark_pro"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_part_home_store" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_label_see_more_hot_sales"
                style="@style/font_400_orange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="189dp"
                android:text="@string/subtitle_see_more"
                app:fontFamily="@font/mark_pro"
                app:layout_constraintBottom_toBottomOf="@id/tv_header_hot_sales"
                app:layout_constraintStart_toEndOf="@id/tv_header_hot_sales"
                app:layout_constraintTop_toTopOf="@id/tv_header_hot_sales" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_hot_sale"
                android:layout_width="0dp"
                android:layout_height="182dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/img_hot_sales"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_header_hot_sales" />

            <TextView
                android:id="@+id/tv_new_hot_sales"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginStart="26dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/border_radius_img_view_selected"
                android:fontFamily="@font/sf_pro_regular"
                android:gravity="center"
                android:text="@string/new_hot_sales"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/iv_hot_sale"
                app:layout_constraintTop_toTopOf="@id/iv_hot_sale" />

            <TextView
                android:id="@+id/tv_title_hot_sales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/sf_pro_regular"
                android:text="@string/iphone_12"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/iv_hot_sale"
                app:layout_constraintTop_toBottomOf="@id/tv_new_hot_sales" />

            <TextView
                android:id="@+id/tv_subtitle_hot_sales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/sf_pro_regular"
                android:text="@string/hot_sales_description"
                android:textColor="@color/white"
                android:textSize="11sp"
                app:layout_constraintStart_toStartOf="@id/iv_hot_sale"
                app:layout_constraintTop_toBottomOf="@id/tv_title_hot_sales" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_hot_sales"
                android:layout_width="98dp"
                android:layout_height="23dp"
                android:layout_marginStart="26dp"
                android:layout_marginTop="26dp"
                android:background="@drawable/border_raduis_button"
                android:fontFamily="@font/sf_pro_regular"
                android:text="@string/buy_now"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="11sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/iv_hot_sale"
                app:layout_constraintTop_toBottomOf="@id/tv_subtitle_hot_sales" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_header_best_seller"
                style="@style/font_700_dark_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="10dp"
                android:text="@string/title_best_seller"
                android:textSize="25sp"
                app:fontFamily="@font/mark_pro"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_hot_sale" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_label_see_more_best_seller"
                style="@style/font_400_orange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="178dp"
                android:text="@string/subtitle_see_more"
                app:layout_constraintBottom_toBottomOf="@id/tv_header_best_seller"
                app:layout_constraintStart_toEndOf="@id/tv_header_best_seller"
                app:layout_constraintTop_toTopOf="@id/tv_header_best_seller" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_best_seller_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="17dp"
                android:orientation="horizontal"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_header_best_seller"
                tools:listitem="@layout/best_seller_cell" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>